2010-04-04  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Use gnulib module `fcntl'.

	Here, "U" means "Convert #ifdef F_DUPFD
	foo #else bar #endif block to expression foo".
	* base.h (open_can_creat): Delete #define.
	[!O_CREAT] (O_RDONLY, O_WRONLY, O_RDWR, O_CREAT, O_TRUNC): Likewise.
	[!O_EXCL] (O_EXCL): Likewise.
	* rcsedit.c (create): Define macro unconditionally.
	* rcsfnms.c: #include <fcntl.h> unconditionally.
	[!HAVE_GETCWD && !HAVE_GETWD] (getcwd): U.
	* rcslex.c: #include <fcntl.h> unconditionally.
	* rcsutil.c: Likewise.
	(dupSafer): U.
	[F_DUPFD] (dup): Delete macro redefinition.
	(movefd): U.
	(fdreopen): Take `open_can_creat' to be 1.
	(runv): U.

2010-04-03  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Ignore <siginfo.h>.

	* base.h: Don't #include <siginfo.h>.

2010-04-03  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Ignore unused <ucontext.h>.

	* base.h: Don't #include <ucontext.h>.

2010-04-03  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int C] Move #include <pwd.h> to .c files.

	* base.h: Don't #include <pwd.h>.
	* rcsutil.c [HAVE_PWD_H]: #include <pwd.h>.

2010-04-03  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int C] Move #include <fcntl.h> to .c files.

	* base.h: Don't #include <fcntl.h>.
	* rcsedit.c [HAVE_FCNTL_H]: #include <fcntl.h>.
	* rcslex.c: Likewise.
	* rcsutil.c: Likewise.

2010-04-03  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Use gnulib module `dirent'.

	* rcsclean.c: #include <dirent.h> unconditionally.
	(get_directory): Define func unconditionally.
	(main): Call `get_directory' unconditionally.

2010-04-03  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Presume <signal> provides SIG{HUP,INT,PIPE,QUIT,TERM,XCPU,XFSZ}.

	* rcsutil.c (regsigs): Remove #ifdef foo and #endif, for
	foo: SIGHUP, SIGINT, SIGPIPE, SIGQUIT, SIGTERM, SIGXCPU, SIGXFZ.

2010-04-03  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Presume <signal.h> provides `SA_SIGINFO'.

	* rcsutil.c: Throughout, take `defined SA_SIGINFO' to be 1.
